--- a/style.css
+++ b/style.css
@@ -62,10 +62,11 @@
     margin-bottom: 8px;
   }
   .cardh5{
-    color: red;
+    color: black;
     font-weight: 100;
     font-style: italic;
     margin-top: -10px;
+    font-size: 12px;
   }
   .card h5{
     font-size: 10px;
@@ -111,3 +112,4 @@
     color: green;
   }
 }
+
